Updated index.js and manifest to be a valid starting point

--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,12 @@
 
   "controllers": "index.js",
 
+  "scripts": {
+    "setup": "scripts/setup.js"
+  },
+
   "files": {
     "/index.html": "frontend/index.html",
-    "/app.js": "frontend/app.js"
+    "/output.js": "frontend/output.js"
   }
 }
